feat: write position lots to the canonical position tables (#92)
The FIFO position write path still wrote five private execution_* tables that
only this service understood. Canonical keeps the same facts but insists on
provenance, so the migration is not a rename.

A lot is opened by a fill *allocation*, not by a fill record. One partial fill
against an order composed of several intents settles several components at
once, and each of those is its own lot; the private opening_fill_record_id
could not express that. position_lots therefore carries both
opening_order_component_id and opening_fill_allocation_id, and the lot id is
derived from the allocation so a redelivered fill reaches the row it already
wrote.

That makes the private receipt table unnecessary. Canonical already makes the
opening allocation unique and (position_lot_id, bot_event_id) unique, so a
redelivery lands on the existing rows instead of on new ones. A redelivery that
reports different economics is caught earlier still: the allocation row is
immutable canonical evidence, so the store checks the reported quantity, gross,
fee, component, flow, instrument and position_effect against it rather than
against a fingerprint of the previous request. That also turns the deferred
assert_position_lot_provenance and assert_lot_movement_provenance failures into
readable errors at the boundary that caused them.

Closing proceeds are carried from the closing allocation rather than recomputed
from a price, and the lot that exhausts the request takes whatever is left of
the gross and the fee. Only then do the movements of a FIFO close add back up
to exactly what the fill settled, which is what
assert_close_allocation_capacity measures.

unit_cost is where the private unit_price and opening_commission end up: the
all-in cost of one unit. It is the one derived figure allowed to round, because
a fee charged in basis points makes the per-unit cost longer than eight
decimals for most sizes and canonical does not tie uni